Fixed sidenav text alignment and async loading$ templates

--- a/src/app/core/components/side-nav/side-nav.component.scss
+++ b/src/app/core/components/side-nav/side-nav.component.scss
@@ -7,6 +7,7 @@
       color: $color-white;
       position: relative;
       font-weight: normal;
+      margin: auto;
     }
     &--panel {
       cursor: pointer;
@@ -29,7 +30,7 @@
     }
 
     &--header {
-      padding: 16px;
+      padding: 20px;
     }
 
     &--list {
